Closed Bug 509469 Opened 15 years ago Closed 15 years ago

Fix how the URL is inserted into the MoreInformationText string

Categories

(Camino Graveyard :: Security, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: alqahira, Assigned: murph)

References

()

Details

(Whiteboard: l10n [camino-2.0])

Attachments

(1 file, 1 obsolete file)

+++ This bug was initially created as a clone of Bug #480207 +++

In bug 480207, we checked in the bulk of the patch while leaving one string sub-optimal:

* The "more info" URL should be read from the browser.safebrowsing.warning.infoURL pref and inserted into the
MoreInformationText localized string (instead of hardcoding the URL in the
string, as it is in this patch).
Flags: camino2.0b4?
Summary: Improve the UI of the safebrowsing blocked site overlay → Fix how the URL is inserted into the MoreInformationText string
Attached patch Fix (obsolete) — Splinter Review
Assignee: nobody → murph
Attachment #393786 - Flags: review?
Attachment #393786 - Flags: superreview?(stuart.morgan+bugzilla)
Attachment #393786 - Flags: review?
Attachment #393786 - Flags: review+
Comment on attachment 393786 [details] [diff] [review]
Fix

> /* Really would like to pull the URL for MoreInformationText from browser.safebrowsing.warning.infoURL in all-camino.js */

That comment should go; otherwise, this works fine. r=ardissone on behavior; we'll let smorgan cover the code at sr.
Comment on attachment 393786 [details] [diff] [review]
Fix

>+"MoreInformationText" = "For more information about why this site was blocked, see Caminoâs <a href='%@'>Safe Browsing Documentation</a>.";

Change "Text" to "Format" in the key, to make it clear that it's a format string that needs a substitution. sr=smorgan otherwise.
Attachment #393786 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Updated with review comments, ready to check in.
Attachment #393786 - Attachment is obsolete: true
Checked in on cvs trunk and CAMINO_2_0_BRANCH.
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: camino2.0b4? → camino2.0b4+
Resolution: --- → FIXED
Whiteboard: l10n → l10n [camino-2.0]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: