Bug 509469 - Fix how the URL is inserted into the MoreInformationText string. Patch by Sean Murphy <murph@seanmurph.com>, r=me, sr=smorgan